[gd_scene load_steps=6 format=3 uid="uid://du3ueixbb1wck"]

[ext_resource type="Script" path="res://addons/event_tree_plugin/task_node.gd" id="1_8ao4j"]
[ext_resource type="Script" path="res://script/system/event/task_action/set_value_task_action.gd" id="2_xsgpu"]
[ext_resource type="Script" path="res://addons/event_tree_plugin/task_node/state_database_loader_menu_button.gd" id="3_11sh6"]
[ext_resource type="Script" path="res://addons/event_tree_plugin/task_node/db_schema_option_button.gd" id="3_n8wyh"]

[sub_resource type="Resource" id="Resource_mdms2"]
script = ExtResource("2_xsgpu")

[node name="SetValue" type="GraphNode"]
offset_right = 394.0
offset_bottom = 414.0
title = "Set Value"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_8ao4j")
task_action = SubResource("Resource_mdms2")

[node name="CustomResourceLoader" type="MenuButton" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "<empty>"
alignment = 0
text_overrun_behavior = 3
item_count = 1
popup/item_0/text = "Load State Database"
popup/item_0/id = 0
script = ExtResource("3_11sh6")

[node name="DBSchemaSelector" type="OptionButton" parent="."]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_n8wyh")

[node name="Value" type="TextEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Value"

[connection signal="on_resource_loaded" from="CustomResourceLoader" to="DBSchemaSelector" method="on_resource_loaded"]
[connection signal="item_selected" from="DBSchemaSelector" to="DBSchemaSelector" method="_on_item_selected"]
